# docs/swagger.json
@@ -16,5 +16,116 @@
     },
     "host": "lubisapp.herokuapp.com",
     "basePath": "/",
-    "paths": {}
+    "paths": {
+        "/presensi": {
+            "get": {
+                "description": "Mengambil semua data presensi.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Presensi"
+                ],
+                "summary": "Get All Data Presensi.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.Presensi"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "controller.JamKerja": {
+            "type": "object",
+            "properties": {
+                "durasi": {
+                    "type": "integer"
+                },
+                "gmt": {
+                    "type": "integer"
+                },
+                "hari": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "jam_keluar": {
+                    "type": "string"
+                },
+                "jam_masuk": {
+                    "type": "string"
+                },
+                "piket_tim": {
+                    "type": "string"
+                },
+                "shift": {
+                    "type": "integer"
+                }
+            }
+        },
+        "controller.Karyawan": {
+            "type": "object",
+            "properties": {
+                "_id": {
+                    "type": "string"
+                },
+                "hari_kerja": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "jabatan": {
+                    "type": "string"
+                },
+                "jam_kerja": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/controller.JamKerja"
+                    }
+                },
+                "nama": {
+                    "type": "string"
+                },
+                "phone_number": {
+                    "type": "string"
+                }
+            }
+        },
+        "controller.Presensi": {
+            "type": "object",
+            "properties": {
+                "_id": {
+                    "type": "string"
+                },
+                "biodata": {
+                    "$ref": "#/definitions/controller.Karyawan"
+                },
+                "checkin": {
+                    "description": "Datetime     primitive.DateTime `bson:\"datetime,omitempty\" json:\"datetime,omitempty\"`",
+                    "type": "string"
+                },
+                "latitude": {
+                    "type": "number"
+                },
+                "location": {
+                    "type": "string"
+                },
+                "longitude": {
+                    "type": "number"
+                },
+                "phone_number": {
+                    "type": "string"
+                }
+            }
+        }
+    }
 }
